Revision history for Math-BigNum

0.02    2016-x-x
        - Support for decimal numbers with underscores (`_`)

0.01    2016-05-02
        - First version, released on an unsuspecting world.